--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -1,42 +1,45 @@
-.ncpi .pi-lead-name-content {
+.ncpi .pi-list-single-head {
   background-color: #fff;
   padding: 30px;
   border: 1px solid #dddddda8;
   border-radius: 8px 8px 0 0;
 }
-.ncpi .pi-lead-name-content .pi-lead-content {
+.ncpi .pi-list-single-head .pi-list-content {
   display: flex;
 }
-.ncpi .pi-lead-name-content .pi-lead-content h3 {
+.ncpi .pi-list-single-head .pi-list-content h3 {
   font-size: 24px;
   font-weight: 500;
   color: #4A5568;
   margin-bottom: 5px;
 }
-.ncpi .pi-lead-name-content .pi-lead-content .logo {
+.ncpi .pi-list-single-head .pi-list-content h3 .pi-btn {
+  border: 1px solid #dddddda8;
+}
+.ncpi .pi-list-single-head .pi-list-content .logo {
   width: 90px;
   height: 90px;
   margin-right: 15px;
   border-radius: 8px;
 }
-.ncpi .pi-lead-name-content .pi-lead-content .pi-lead-address address {
+.ncpi .pi-list-single-head .pi-list-content .pi-lead-address address {
   font-style: normal;
   font-size: 12px;
   color: #718096;
 }
-.ncpi .pi-lead-name-content .pi-lead-button-content .pi-edit-btn {
+.ncpi .pi-list-single-head .pi-edit-btn {
   text-align: right;
   display: block;
   margin-bottom: 30px;
 }
-.ncpi .pi-lead-name-content .pi-lead-button-content .pi-edit-btn button {
+.ncpi .pi-list-single-head .pi-edit-btn .pi-btn {
   border: 1px solid #dddddda8;
   padding: 5px 12px !important;
 }
-.ncpi .pi-lead-name-content .pi-lead-button-content .pi-btn-medium.pi-bg-stroke {
+.ncpi .pi-list-single-head .pi-list-single-button-content .pi-btn-medium.pi-bg-stroke {
   padding: 8px 15px !important;
 }
-.ncpi .pi-lead-name-content .pi-lead-button-content button {
+.ncpi .pi-list-single-head .pi-list-single-button-content button {
   background-color: #fff;
   color: #4A5568;
   margin-left: 5px;
@@ -44,12 +47,12 @@
   border: 1px solid #dddddda8;
   line-height: 15px;
 }
-.ncpi .pi-lead-name-content .pi-lead-button-content button img {
+.ncpi .pi-list-single-head .pi-list-single-button-content button img {
   position: relative;
   top: 2px;
   left: -3px;
 }
-.ncpi .pi-lead-name-content .pi-lead-button-content .pi-action-btn {
+.ncpi .pi-list-single-head .pi-list-single-button-content .pi-action-btn {
   top: 5px;
 }
 .ncpi .pi-tag-content {
@@ -58,6 +61,11 @@
   border: 1px solid #dddddda8;
   border-top: none;
   border-radius: 0 0 8px 8px;
+}
+.ncpi .pi-tag-content .pi-budget span {
+  color: #718096;
+  font-size: 13px;
+  font-weight: 500;
 }
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content {
@@ -228,21 +236,28 @@
   font-size: 12px;
   color: #718096;
 }
-.ncpi .pi-board-column .pi-board-column-item .pi-board-item-bottom {
+.ncpi .pi-avatar-content {
   padding: 10px 15px;
   display: flex;
 }
-.ncpi .pi-board-column .pi-board-column-item .pi-board-item-bottom .pi-avatar-text {
+.ncpi .pi-avatar-content img {
+  width: 37px;
+  height: 38px;
+}
+.ncpi .pi-avatar-content .pi-avatar-text {
   margin-left: 8px;
 }
-.ncpi .pi-board-column .pi-board-column-item .pi-board-item-bottom .pi-avatar-text h5 {
-  line-height: 17px;
-}
-.ncpi .pi-board-column .pi-board-column-item .pi-board-item-bottom .pi-avatar-text p,
-.ncpi .pi-board-column .pi-board-column-item .pi-board-item-bottom .pi-avatar-text h5 {
-  margin: 0;
+.ncpi .pi-avatar-content .pi-avatar-text h5 {
+  line-height: 140%;
   color: #2D3748;
-  font-weight: normal;
+  font-weight: 500;
+}
+.ncpi .pi-avatar-content .pi-avatar-text p {
+  color: #425466;
+}
+.ncpi .pi-avatar-content .pi-avatar-text p,
+.ncpi .pi-avatar-content .pi-avatar-text h5 {
+  margin: 0;
   font-size: 12px;
 }
 .ncpi .pi-broad-content {
@@ -250,4 +265,114 @@
   width: 235px;
   height: 89%;
   padding: 15px 10px;
+}
+.ncpi .pi-list-single-head-two {
+  padding: 30px 30px 20px;
+}
+.ncpi .pi-list-single-head-two .pi-list-content {
+  display: block;
+}
+.ncpi .pi-list-single-head-two .pi-list-content h3 {
+  display: inline-flex;
+}
+.ncpi .pi-list-single-head-two .pi-list-content h3 .pi-edit-btn {
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+.ncpi .pi-list-single-head-two .pi-avatar-content {
+  padding: 0;
+}
+.ncpi .pi-list-single-head-two .pi-select {
+  margin-bottom: 30px;
+}
+.ncpi .pi-list-single-head-two .pi-select label {
+  font-size: 12px;
+  color: #425466;
+}
+.ncpi .pi-list-single-head-two .pi-select select {
+  width: auto;
+  margin-left: 15px;
+  font-size: 11px;
+  color: #F68A0B;
+  margin-top: 0;
+  border: 1px solid #CBD5E0;
+  padding: 13px;
+  border-radius: 5px;
+  padding: 8px;
+}
+.ncpi .pi-range {
+  width: 70%;
+  position: relative;
+  display: flex;
+  margin-top: 10px;
+}
+.ncpi .pi-range label {
+  font-size: 12px;
+  color: #425466;
+  margin-right: 15px;
+}
+.ncpi .pi-range #slider-value {
+  top: -15px;
+  font-size: 12px;
+  color: #425466;
+}
+.ncpi input[type=range] {
+  position: relative;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  display: block;
+  width: 100%;
+  height: 8px;
+  background-color: #CCD6FF !important;
+  margin-top: 10px;
+  outline: none;
+}
+.ncpi input[type=range]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-moz-track {
+  -moz-appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-ms-track {
+  appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 5px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 10px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]::-ms-thumb {
+  appearance: none;
+  height: 20px;
+  width: 10px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]:active::-webkit-slider-thumb {
+  background-color: #ffffff;
+  border: 3px solid #3264fe;
+}
+.ncpi #slider-value {
+  position: absolute;
+  color: #000;
+  right: 14px;
+  top: 0px;
 }
