--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1346,7 +1346,7 @@ html {
   cursor: pointer;
 }
 .ncpi .pi-action-btn {
-  height: 35px;
+  height: 37px;
   padding: 5px 5px;
   background-color: #fff;
   display: inline-block;
@@ -1832,66 +1832,6 @@ html {
 .wp-admin .pi-social-content .pi-social-icon .pi-skype {
   background-color: rgba(0, 175, 240, 0.08);
 }
-.wp-admin input[type=range] {
-  position: relative;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  display: block;
-  width: 100%;
-  height: 8px;
-  background-color: #CCD6FF !important;
-  margin-top: 10px;
-  outline: none;
-}
-.wp-admin input[type=range]::-webkit-slider-runnable-track {
-  -webkit-appearance: none;
-  height: 8px;
-}
-.wp-admin input[type=range]::-moz-track {
-  -moz-appearance: none;
-  height: 8px;
-}
-.wp-admin input[type=range]::-ms-track {
-  appearance: none;
-  height: 8px;
-}
-.wp-admin input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  height: 20px;
-  width: 5px;
-  background-color: #3264fe;
-  cursor: pointer;
-  margin-top: -6px;
-  border: none;
-}
-.wp-admin input[type=range]::-moz-range-thumb {
-  -webkit-appearance: none;
-  height: 20px;
-  width: 10px;
-  background-color: #3264fe;
-  cursor: pointer;
-  margin-top: -6px;
-  border: none;
-}
-.wp-admin input[type=range]::-ms-thumb {
-  appearance: none;
-  height: 20px;
-  width: 10px;
-  background-color: #3264fe;
-  cursor: pointer;
-  margin-top: -6px;
-  border: none;
-}
-.wp-admin input[type=range]:active::-webkit-slider-thumb {
-  background-color: #ffffff;
-  border: 3px solid #3264fe;
-}
-.wp-admin #slider-value {
-  position: absolute;
-  color: #000;
-  right: 14px;
-  top: 0px;
-}
 
 /*-------------------------------------------------------------- 
 # modal
@@ -2127,6 +2067,83 @@ html {
   font-size: 11px;
   color: #F68A0B;
   margin-top: 0;
+}
+.ncpi .pi-range {
+  width: 70%;
+  position: relative;
+  display: flex;
+  margin-top: 10px;
+}
+.ncpi .pi-range label {
+  font-size: 12px;
+  color: #425466;
+  margin-right: 15px;
+  margin-top: 2px;
+}
+.ncpi .pi-range #slider-value {
+  top: -15px;
+  font-size: 12px;
+  color: #425466;
+}
+.ncpi input[type=range] {
+  position: relative;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  display: block;
+  width: 100%;
+  height: 8px;
+  background-color: #CCD6FF !important;
+  margin-top: 10px;
+  outline: none;
+}
+.ncpi input[type=range]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-moz-track {
+  -moz-appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-ms-track {
+  appearance: none;
+  height: 8px;
+}
+.ncpi input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 5px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]::-moz-range-thumb {
+  -webkit-appearance: none;
+  height: 20px;
+  width: 10px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]::-ms-thumb {
+  appearance: none;
+  height: 20px;
+  width: 10px;
+  background-color: #3264fe;
+  cursor: pointer;
+  margin-top: -6px;
+  border: none;
+}
+.ncpi input[type=range]:active::-webkit-slider-thumb {
+  background-color: #ffffff;
+  border: 3px solid #3264fe;
+}
+.ncpi #slider-value {
+  position: absolute;
+  color: #000;
+  right: 14px;
+  top: 0px;
 }
 
 /*-------------------------------------------------------------- 
@@ -2927,6 +2944,7 @@ html {
   border-bottom: 3px solid #fff;
   color: #718096;
   cursor: pointer;
+  margin: 0;
 }
 .ncpi .pi-horizontal-tab .pi-tab.pi-active {
   border-bottom: 3px solid var(--bg-color-blue);
@@ -2941,7 +2959,7 @@ html {
 # widget
 --------------------------------------------------------------*/
 .ncpi {
-  /* Rounded sliders */
+  /* Rounded pi-sliders */
 }
 .ncpi .pi-widget {
   border: 1px solid #dddddda8;
@@ -2955,17 +2973,32 @@ html {
   font-size: 16px;
   font-weight: 700;
 }
+.ncpi .pi-widget .pi-avatar-content img {
+  width: 30px;
+  height: 30px;
+}
+.ncpi .pi-widget .pi-avatar-content h5,
+.ncpi .pi-widget .pi-avatar-content p {
+  font-size: 10px !important;
+}
 .ncpi .pi-widget .pi-action-content {
   margin-left: auto;
 }
 .ncpi .pi-widget button {
   background: transparent;
   border: none;
+  padding: 0;
 }
 .ncpi .pi-widget button .pi-action-btn {
   height: 25px;
   padding: 0px 2px;
   top: 0px;
+}
+.ncpi .pi-widget .pi-persons-content {
+  margin-top: 10px;
+  padding: 15px;
+  border: 1px solid #dddddda8;
+  border-radius: 8px;
 }
 .ncpi .pi-widget .pi-persons-content address {
   font-size: 10px;
@@ -3040,18 +3073,27 @@ html {
   bottom: 0;
   left: -12px;
 }
-.ncpi .switch {
+.ncpi .pi-switch-content {
+  text-align: right;
+}
+.ncpi .pi-switch-content .pi-primary {
+  font-size: 10px;
+  position: relative;
+  top: -3px;
+  margin-left: 5px;
+}
+.ncpi .pi-switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 34px;
+  width: 44px;
+  height: 15px;
 }
-.ncpi .switch input {
+.ncpi .pi-switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
-.ncpi .slider {
+.ncpi .pi-slider {
   position: absolute;
   cursor: pointer;
   top: 0;
@@ -3061,29 +3103,29 @@ html {
   background-color: #ccc;
   transition: 0.4s;
 }
-.ncpi .slider:before {
+.ncpi .pi-slider:before {
   position: absolute;
   content: "";
-  height: 26px;
-  width: 26px;
+  height: 12px;
+  width: 12px;
   left: 4px;
-  bottom: 4px;
+  bottom: 2px;
   background-color: white;
   transition: 0.4s;
 }
-.ncpi input:checked + .slider {
+.ncpi input:checked + .pi-slider {
   background-color: #2196F3;
 }
-.ncpi input:focus + .slider {
+.ncpi input:focus + .pi-slider {
   box-shadow: 0 0 1px #2196F3;
 }
-.ncpi input:checked + .slider:before {
+.ncpi input:checked + .pi-slider:before {
   transform: translateX(26px);
 }
-.ncpi .slider.round {
+.ncpi .pi-slider.pi-round {
   border-radius: 34px;
 }
-.ncpi .slider.round:before {
+.ncpi .pi-slider.pi-round:before {
   border-radius: 50%;
 }
 
@@ -3422,6 +3464,7 @@ select {
   width: 100%;
   border: 1px solid #CBD5E0;
   outline: none;
+  line-height: 100%;
 }
 .ncpi .pi-form-style-one select:focus,
 .ncpi .pi-form-style-one input[type=url]:focus,
@@ -3447,6 +3490,7 @@ select {
   width: 100%;
   border: 1px solid #dddddda8;
   outline: none;
+  line-height: 100%;
 }
 .ncpi .pi-form-style-two .row > div {
   padding: 5px;
