--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1145,9 +1145,6 @@ html {
   margin-left: 5px;
   outline: none;
 }
-.ncpi .pi-table-two {
-  margin-top: 25px;
-}
 .ncpi .pi-table-two input[type=checkbox] {
   position: relative;
   top: -7px;
@@ -1175,7 +1172,7 @@ html {
   height: 30px;
   border-radius: 50%;
   border: 1px solid #dddddda8;
-  padding: 5px;
+  padding: 6px 5px;
   margin-right: 10px;
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 7px -1px, rgba(0, 0, 0, 0.06) 0px 2px 0px -1px;
@@ -2080,11 +2077,6 @@ html {
   margin-right: 15px;
   margin-top: 2px;
 }
-.ncpi .pi-range #slider-value {
-  top: -15px;
-  font-size: 12px;
-  color: #425466;
-}
 .ncpi input[type=range] {
   position: relative;
   -webkit-appearance: none;
@@ -2138,12 +2130,6 @@ html {
 .ncpi input[type=range]:active::-webkit-slider-thumb {
   background-color: #ffffff;
   border: 3px solid #3264fe;
-}
-.ncpi #slider-value {
-  position: absolute;
-  color: #000;
-  right: 14px;
-  top: 0px;
 }
 
 /*-------------------------------------------------------------- 
@@ -3450,6 +3436,8 @@ select {
 .ncpi .pi-form-style-one label {
   font-size: 14px;
   color: #718096;
+  margin-bottom: 8px;
+  display: inline-block;
 }
 .ncpi .pi-form-style-one select,
 .ncpi .pi-form-style-one input[type=url],
@@ -3457,7 +3445,6 @@ select {
 .ncpi .pi-form-style-one input[type=email],
 .ncpi .pi-form-style-one input[type=text] {
   border-radius: 7px;
-  margin-top: 8px;
   color: #4A5568;
   font-size: 14px;
   padding: 13px;
