--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -878,7 +878,7 @@ html {
   margin-top: 4px;
 }
 .ncpi .pi-table tr {
-  border: 1px solid #EDF2F7;
+  border-bottom: 1px solid #EDF2F7;
 }
 .ncpi .pi-table .pi-action span {
   padding: 7px;
@@ -906,7 +906,7 @@ html {
   position: absolute;
   background-color: #fff;
   min-width: 210px;
-  box-shadow: 0 0 4px 2px #dddddd6b;
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.13);
   z-index: 1;
   right: 0;
   top: 45px;
@@ -1194,6 +1194,22 @@ html {
 }
 .ncpi .pi-table-two .pi-dropdown {
   margin-top: 6px;
+}
+.ncpi .pi-table-three {
+  margin-top: 25px;
+}
+.ncpi .pi-table-three td {
+  font-size: 14px;
+}
+.ncpi .pi-table-three td span {
+  color: #718096;
+}
+.ncpi .pi-table-three td:nth-child(2) img {
+  vertical-align: middle;
+}
+.ncpi .pi-table-three td:nth-child(2) span {
+  margin-left: 15px;
+  color: #4A5568;
 }
 
 /*-------------------------------------------------------------- 
@@ -1683,6 +1699,11 @@ html {
 .ncpi .pi-pagination li a.pi-active,
 .ncpi .pi-pagination li a:hover {
   color: var(--text-color-blue) !important;
+}
+.ncpi .pi-action-content button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
 .ncpi .pi-dropbtn {
   background-color: transparent;
@@ -3346,7 +3367,7 @@ body {
   font-weight: 500;
 }
 .ncpi .pi-btn-small {
-  padding: 7px 12px !important;
+  padding: 6px 10px !important;
   font-weight: 500;
   font-size: 10px;
   border-radius: 4px;
