--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -18,6 +18,7 @@
   border: 1px solid #dddddda8;
   margin-left: 20px;
   margin-bottom: 10px;
+  font-size: 10px;
 }
 .ncpi .pi-list-single-head .pi-list-content .logo {
   width: 90px;
@@ -87,6 +88,7 @@
 }
 .ncpi .pi-list-single-button-content .pi-action-btn {
   top: 5px;
+  padding: 5px 0px;
 }
 .ncpi .pi-list-single-button-content .pi-action-btn button {
   border: none;
@@ -180,6 +182,7 @@
 }
 .ncpi .pi-tab-buttons-group .pi-activity-field input:focus {
   outline: none;
+  box-shadow: none;
 }
 .ncpi .pi-tab-buttons-group button:last-child {
   border: none;
@@ -200,16 +203,8 @@
   border-style: dashed;
   width: 32px;
 }
-.ncpi .pi-small-button-group h3 {
-  font-size: 16px;
-  font-weight: 500;
-  margin-bottom: 15px;
-  margin-top: 30px;
-  color: #4A5568;
-}
 .ncpi .pi-small-button-group .pi-btn-small {
   color: #718096 !important;
-  font-size: 12px;
   font-weight: 500;
   border: 1px solid #dddddda8;
   margin-right: 5px;
@@ -243,7 +238,6 @@
   margin-right: 0;
 }
 .ncpi .pi-small-button-group-two .pi-btn {
-  border: 1px solid #dddddda8;
   color: #718096;
 }
 .ncpi .pi-px-25 {
@@ -353,13 +347,6 @@
   width: 235px;
   height: 89%;
   padding: 15px 10px;
-}
-.ncpi .pi-note-content h3 {
-  font-size: 16px;
-  font-weight: 500;
-  margin-bottom: 15px;
-  margin-top: 30px;
-  color: #4A5568;
 }
 .ncpi .pi-note {
   display: flex;
