--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1202,6 +1202,10 @@ html {
 .ncpi .pi-table-three th:nth-child(n+3) {
   text-align: center;
 }
+.ncpi .pi-table-four tbody tr td:nth-child(2) {
+  font-weight: 600;
+  color: #2D3748;
+}
 
 /*-------------------------------------------------------------- 
 # crid
@@ -1946,7 +1950,7 @@ html {
 }
 .ncpi .pi-modal-content .pi-content {
   overflow: auto;
-  padding: 30px 45px 45px;
+  padding: 30px 45px 0px;
 }
 @media screen and (max-width: 550px) {
   .ncpi .pi-modal-content .pi-content {
@@ -2079,8 +2083,9 @@ html {
   }
 }
 .ncpi .pi-modal-sidebar .pi-modal-footer {
-  margin-top: 50px;
-  padding: 0px 45px 5px;
+  margin-top: 35px;
+  padding: 20px 45px 5px;
+  border: 1px solid #dddddda8;
 }
 @media screen and (max-width: 992px) {
   .ncpi .pi-modal-sidebar .pi-modal-footer {
@@ -2101,6 +2106,40 @@ html {
   font-size: 11px;
   color: #F68A0B;
   margin-top: 0;
+}
+.ncpi .pi-modal-sidebar-two {
+  width: 760px;
+}
+.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-btn-small {
+  color: #F68A0B;
+  background-color: #FFF5E9;
+  border-radius: 0;
+  border: none;
+  font-size: 14px;
+  padding: 6px 14px !important;
+}
+.ncpi .pi-modal-sidebar-two .pi-modal-header .pi-btn-medium {
+  background: #16B21D;
+  border-radius: 0;
+  border: none;
+}
+.ncpi .pi-modal-sidebar-two .pi-checklist-head {
+  border-bottom: 1px solid #dddddda8;
+  padding: 10px 0;
+}
+.ncpi .pi-modal-sidebar-two .pi-checklist-head span {
+  font-size: 14px;
+  color: #718096;
+}
+.ncpi .pi-modal-sidebar-two .pi-checklist-content ul li {
+  font-size: 12px;
+  padding: 5px 0;
+  color: #718096;
+}
+.ncpi .pi-modal-sidebar-two .pi-checklist-content ul li input[type=checkbox] {
+  position: relative;
+  top: 2px;
+  margin-right: 5px;
 }
 .ncpi .pi-range {
   width: 70%;
@@ -2203,6 +2242,7 @@ html {
   font-size: 14px;
   position: relative;
 }
+.ncpi .pi-welcome-tabs-content .pi-tab .pi-done:hover,
 .ncpi .pi-welcome-tabs-content .pi-tab .pi-done {
   position: absolute;
   top: 0px;
@@ -2213,9 +2253,11 @@ html {
   opacity: 1;
   border: 2px solid #4c6fff !important;
 }
+.ncpi .pi-welcome-tabs-content .pi-tab .pi-done:hover svg path,
 .ncpi .pi-welcome-tabs-content .pi-tab .pi-done svg path {
   fill: var(--text-color-white);
 }
+.ncpi .pi-welcome-tabs-content .pi-tab .pi-done:hover svg,
 .ncpi .pi-welcome-tabs-content .pi-tab .pi-done svg {
   left: 1px;
   top: -15px;
@@ -2897,18 +2939,18 @@ html {
   margin-top: 10px !important;
 }
 
-.ncpi .pi-category-select-content {
+.ncpi .pi-search-btn {
   display: flex;
 }
-.ncpi .pi-category-select-content #pi-select-content {
+.ncpi .pi-search-btn .pi-search-form {
   margin-left: -4px;
 }
 @media screen and (max-width: 550px) {
-  .ncpi .pi-category-select-content #pi-select-content {
+  .ncpi .pi-search-btn .pi-search-form {
     width: 400px;
   }
 }
-.ncpi .pi-category-select-content #pi-select-content ul {
+.ncpi .pi-search-btn .pi-search-form ul {
   display: flex;
   border: 1px solid #dddddda8;
   display: flex;
@@ -2916,29 +2958,29 @@ html {
   border-radius: 0 8px 8px 0;
   background-color: #FAFAFB;
 }
-.ncpi .pi-category-select-content #pi-select-content ul li:first-child svg {
+.ncpi .pi-search-btn .pi-search-form ul li:first-child svg {
   top: 0px;
 }
-.ncpi .pi-category-select-content #pi-select-content ul li:last-child {
+.ncpi .pi-search-btn .pi-search-form ul li:last-child {
   border-left: 1px solid #dddddda8;
   padding: 6px 8px;
   margin-left: 10px;
   cursor: pointer;
 }
-.ncpi .pi-category-select-content #pi-select-content ul li {
+.ncpi .pi-search-btn .pi-search-form ul li {
   padding: 6px 5px;
   padding-left: 20px;
 }
 @media screen and (max-width: 820px) {
-  .ncpi .pi-category-select-content #pi-select-content ul li {
+  .ncpi .pi-search-btn .pi-search-form ul li {
     padding-left: 15px;
   }
 }
-.ncpi .pi-category-select-content #pi-select-content ul li svg {
+.ncpi .pi-search-btn .pi-search-form ul li svg {
   position: relative;
   top: 4px;
 }
-.ncpi .pi-category-select-content #pi-select-content ul li select {
+.ncpi .pi-search-btn .pi-search-form ul li select {
   border: none;
   font-size: 12px;
   font-weight: 500;
@@ -2946,7 +2988,7 @@ html {
   outline: none;
 }
 @media screen and (max-width: 820px) {
-  .ncpi .pi-category-select-content #pi-select-content ul li select {
+  .ncpi .pi-search-btn .pi-search-form ul li select {
     font-size: 10px;
   }
 }
@@ -3235,6 +3277,9 @@ html {
   margin-top: 5px;
   position: relative;
 }
+.ncpi .pi-mt-m-10 {
+  margin-top: -10px;
+}
 .ncpi .pi-ml-10 {
   margin-left: 10px;
 }
@@ -3349,7 +3394,7 @@ body {
     font-weight: 700;
   }
 }
-.ncpi .title-style-three {
+.ncpi .pi-title-small {
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 15px;
@@ -3490,9 +3535,6 @@ select {
 .ncpi .pi-form-style-one textarea:focus {
   border: 1px solid #4C6FFF !important;
 }
-.ncpi .pi-content .pi-form-style-one textarea {
-  margin-top: 5px;
-}
 .ncpi .pi-content .pi-form-style-two textarea {
   margin-top: 0px !important;
 }
@@ -3522,9 +3564,6 @@ select {
 .ncpi .pi-form-style-one input[type=email]:focus,
 .ncpi .pi-form-style-one input[type=text]:focus {
   border: 1px solid #4C6FFF !important;
-}
-.ncpi .pi-form-style-one textarea {
-  margin-top: 10px;
 }
 .ncpi .pi-form-style-two select,
 .ncpi .pi-form-style-two input[type=email],
