--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -105,11 +105,6 @@
   border-top: none;
   border-radius: 0 0 8px 8px;
 }
-.ncpi .pi-tag-content .pi-budget span {
-  color: #718096;
-  font-size: 13px;
-  font-weight: 500;
-}
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content {
     display: inline-block;
@@ -145,6 +140,11 @@
 }
 .ncpi .pi-tag-content ul li span {
   margin-right: 5px;
+}
+.ncpi .pi-tag-content ul li .pi-date {
+  color: #718096;
+  font-size: 13px;
+  font-weight: 500;
 }
 .ncpi .pi-tag-content ul select {
   border: 1px solid #dddddda8;
@@ -218,7 +218,6 @@
   height: 30px;
   padding: 5px 4px !important;
   border-radius: 5px;
-  border: 2px solid #dddddda8;
 }
 .ncpi .pi-small-button-group .pi-buttons-right .pi-t-1 {
   position: relative;
