--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -105,6 +105,11 @@
   border-top: none;
   border-radius: 0 0 8px 8px;
 }
+.ncpi .pi-tag-content .pi-budget span {
+  color: #718096;
+  font-size: 13px;
+  font-weight: 500;
+}
 @media screen and (max-width: 820px) {
   .ncpi .pi-tag-content {
     display: inline-block;
@@ -142,9 +147,10 @@
   margin-right: 5px;
 }
 .ncpi .pi-tag-content ul li .pi-date {
-  color: #718096;
-  font-size: 13px;
+  margin-left: 5px;
+  color: #4a5568;
   font-weight: 500;
+  font-size: 12px;
 }
 .ncpi .pi-tag-content ul select {
   border: 1px solid #dddddda8;
