--- a/src/admin/scss/partials/_list-single.scss
+++ b/src/admin/scss/partials/_list-single.scss
@@ -57,6 +57,9 @@
 .ncpi .pi-list-single-button-content .pi-btn-medium.pi-bg-stroke.pi-invite {
   padding: 10px 15px !important;
 }
+.ncpi .pi-list-single-button-content .pi-btn-medium.pi-bg-blue {
+  padding: 11px 15px !important;
+}
 .ncpi .pi-list-single-button-content .pi-select {
   margin-bottom: 30px;
   text-align: right;
@@ -97,8 +100,8 @@
   margin-left: 0;
 }
 .ncpi .pi-list-single-button-content .pi-action-btn .pi-dropdown-content {
-  margin-top: 5px;
-  left: -50px;
+  margin-top: 3px;
+  left: -70px;
 }
 .ncpi .pi-tag-content {
   padding: 30px;
@@ -217,8 +220,9 @@
   border: 1px solid #dddddda8;
   margin-right: 5px;
 }
-.ncpi .pi-small-button-group .pi-btn-small:hover {
+.ncpi .pi-small-button-group .pi-btn-small.pi-active, .ncpi .pi-small-button-group .pi-btn-small:hover {
   color: #2D3748 !important;
+  box-shadow: 0px 4.95074px 6.60099px rgba(0, 0, 0, 0.07) !important;
 }
 .ncpi .pi-small-button-group .pi-buttons-right .pi-btn-small {
   width: 30px;
